...

    final isDesktop = MediaQuery.of(context).size.width > 600;

    return Scaffold(
      backgroundColor: AppColors.background(context),
      appBar: AppBar(
        title: Text(AppLocalizations.t(context, 'Setup Your Store')),
        backgroundColor: AppColors.transparent,
        elevation: 0,
        actions: [
          TextButton.icon(
            onPressed: () {
               Provider.of<AuthProvider>(context, listen: false).signOut();
...
